[tool.poetry]
authors = ["amor71 <amor71@sgeltd.com>"]
description = "Pythonic Bridge to Solana Programs"
license = "LGPL2.1"
name = "solpyb"
readme = "README.md"
version = "0.0.1"

[tool.poetry.dependencies]
python = "^3.10"
solana = "^0.25.1"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
codecov = "^2.1.12"
isort = "^5.10.1"
mypy = "^0.971"
pytest = "^7.1.3"
pytest-asyncio = "^0.19.0"
pytest-codecov = "^0.5.0"
therapist = "^2.2.0"
pytest-cov = "^3.0.0"
bandit = "^1.7.4"
autoflake = "^1.5.3"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
